--- a/app/src/main/res/layout/activity_dialog.xml
+++ b/app/src/main/res/layout/activity_dialog.xml
@@ -11,10 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:gravity="center"
         android:text="@string/details_of_your_activity"
         android:textColor="@color/black"
-        android:textSize="24sp"
+        android:textSize="16sp"
+        android:fontFamily="@font/poppinsbold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,9 +25,14 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/activity_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         android:hint="@string/activity_hint"
         app:layout_constraintTop_toBottomOf="@id/topDialogText"
         app:layout_constraintBottom_toTopOf="@+id/activity_time_input">
@@ -33,7 +41,8 @@
             android:id="@+id/activityName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppinsmedium" />
+            android:fontFamily="@font/poppinsmedium"
+            android:drawableRight="@drawable/activity"/>
 
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -42,7 +51,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/activity_time_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="56dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:hint="@string/hours_hint"
@@ -53,7 +62,8 @@
             android:id="@+id/activityTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppinsmedium" />
+            android:fontFamily="@font/poppinsmedium"
+            android:drawableRight="@drawable/time"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,5 +80,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_time_input"
         app:layout_constraintVertical_bias="0.861" />
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
